# kafka-replicator

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.rst  docker-compose.yml  rustfmt.toml
examples/: example-config-invalid.yml  example-config.yml  experiment-1.yml
fixtures/: example-config.yml
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  metrics.rs  observer.rs  producer.rs  utils.rs  watcher.rs
tests/: test_config.rs  utils.rs
