[package]
name = "kafka_replicator"
version = "0.1.0"
authors = ["Alex"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.21", features = ["full"]}
structopt = "0.3.15"
clap = "2.33.1"
rand = "0.7.3"
regex = "1.3.9"
log = "0.4.0"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
toml = "0.5.6"
rdkafka-sys = "1.3.1"
rdkafka = { version = "0.23.1", features = ["ssl", "sasl"]}
env_logger = "0.7.1"
futures = "0.3.0"


[lib]
name = "replicator"
path = "src/lib.rs"

[[bin]]
name = "replicator"
path = "src/main.rs"


[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "watcher"
path = "src/watcher.rs"