[package]
name = "kafka-replicator"
version = "0.4.2"
authors = ["Alex"]
edition = "2018"
description = "Application for replication data between kafka clusters."
readme = "README.md"
repository = "https://github.com/lispython/kafka-replicator/"
license-file = "LICENSE"
keywords = ["kafka", "replication", "observer"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.21", features = ["full"]}
structopt = "0.3.15"
clap = "2.33.1"
rand = "0.7.3"
regex = "1.3.9"
log = "0.4.0"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
toml = "0.5.6"
rdkafka-sys = "1.3.1"
rdkafka = { version = "0.23.1", features = ["ssl", "sasl"]}
env_logger = "0.7.1"
futures = "0.3.0"
byte-unit = "4.0.6"
pretty-bytes = "0.2.2"
prometheus = "0.9.0"
lazy_static = "1.4.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
ctrlc = "3.1.5"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[lib]
name = "replicator"
path = "src/lib.rs"

[[bin]]
name = "kafka-replicator"
path = "src/main.rs"

[[bin]]
name = "kafka-producer"
path = "src/producer.rs"

[[bin]]
name = "kafka-observer"
path = "src/observer.rs"
